force-app/main/default/objects/Indicator_of_Compromise__c/Indicator_of_Compromise__c.object-meta.xml
<CustomObject>
    <label>Indicator of Compromise</label>
    <pluralLabel>Indicators of Compromise</pluralLabel>
    <nameField>
        <label>IOC Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Stores individual indicators of compromise (IPs, hashes, domains) linked to a Threat.</description>
</CustomObject>