force-app/main/default/objects/Indicator_of_Compromise__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence (%)</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>