force-app/main/default/objects/Indicator_of_Compromise__c/fields/IOC_Type__c.field-meta.xml
<CustomField>
    <fullName>IOC_Type__c</fullName>
    <label>IOC Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IP Address</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>File Hash MD5</fullName>
                <label>File Hash (MD5)</label>
            </value>
            <value>
                <fullName>File Hash SHA1</fullName>
                <label>File Hash (SHA1)</label>
            </value>
            <value>
                <fullName>File Hash SHA256</fullName>
                <label>File Hash (SHA256)</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <label>Email Address</label>
            </value>
            <value>
                <fullName>Registry Key</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>