force-app/main/default/objects/Indicator_of_Compromise__c/fields/Threat__c.field-meta.xml
<CustomField>
    <fullName>Threat__c</fullName>
    <label>Threat</label>
    <type>MasterDetail</type>
    <referenceTo>Threat__c</referenceTo>
    <relationshipLabel>Indicators of Compromise</relationshipLabel>
    <relationshipName>Indicators_of_Compromise</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>