force-app/main/default/objects/Indicator_of_Compromise__c/validationRules/Active_IOC_Must_Have_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_IOC_Must_Have_Type</fullName>
    <active>true</active>
    <description>An active IOC must have an IOC Type assigned for proper categorization.</description>
    <errorConditionFormula>Is_Active__c &amp;&amp; ISBLANK(TEXT(IOC_Type__c))</errorConditionFormula>
    <errorMessage>IOC Type is required for all active Indicators of Compromise.</errorMessage>
    <errorDisplayField>IOC_Type__c</errorDisplayField>
</ValidationRule>