force-app/main/default/objects/Indicator_of_Compromise__c/validationRules/IOC_Value_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>IOC_Value_Cannot_Be_Blank</fullName>
    <active>true</active>
    <description>Every IOC record must have a Value defined.</description>
    <errorConditionFormula>ISBLANK(Value__c)</errorConditionFormula>
    <errorMessage>IOC Value cannot be blank. Please enter the indicator value (e.g. IP address, domain, hash).</errorMessage>
    <errorDisplayField>Value__c</errorDisplayField>
</ValidationRule>